--- a/_sample/package.json
+++ b/_sample/package.json
@@ -9,7 +9,10 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "better-sqlite3": "^11.10.0",
     "kysely": "^0.28.2",
-    "lodash": "^4.17.21"
+    "kysely-codegen": "^0.18.5",
+    "lodash": "^4.17.21",
+    "sqlite3": "^5.1.7"
   }
 }
