--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "esbuild": "^0.25.5",
     "express": "^5.1.0",
+    "kysely": "^0.28.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
