--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "4.7.0-rc.0",
     "esbuild": "^0.25.5",
     "express": "^5.1.0",
     "kysely": "^0.28.2",
+    "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
