--- a/_sample/tsconfig.json
+++ b/_sample/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "allowJs": true,
     "jsx": "react-jsx",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
