--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "4.7.0-rc.0",
+    "dts-bundle-generator": "^9.5.1",
     "esbuild": "^0.25.5",
     "express": "^5.1.0",
     "kysely": "^0.28.2",
@@ -29,7 +30,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
-    "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
   },
