--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "kysely": "^0.28.2",
     "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "ts-json-schema-generator": "^2.4.0",
+    "ts-morph": "^26.0.0",
+    "tsconfck": "^3.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -32,6 +35,7 @@
     "globals": "^16.2.0",
     "jest": "^30.0.4",
     "ts-jest": "^29.4.0",
+    "tsx": "^4.20.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0"
   },
