--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "4.7.0-rc.0",
+    "chokidar": "^4.0.3",
     "express": "^5.1.0",
     "fast-glob": "^3.3.3",
     "globby": "^14.1.0",
