--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "4.7.0-rc.0",
+    "arg": "^5.0.2",
     "chokidar": "^3.6.0",
     "express": "^5.1.0",
     "fast-glob": "^3.3.3",
