--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "kypanel",
+  "name": "kypow",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "bin": {
-    "kypanel": "./bin/bin.ts"
+    "kypow": "./bin/bin.ts"
   },
   "scripts": {
     "dev": "vite",
