--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "dependencies": {
     "arg": "^5.0.2",
     "chokidar": "^3.6.0",
+    "dedent": "^1.6.0",
     "fast-glob": "^3.3.3",
+    "ink": "^6.1.1",
+    "ink-markdown": "^1.0.4",
+    "ink-quicksearch-input": "^1.0.0",
+    "ink-select-input": "^6.2.0",
     "json-schema-faker": "^0.5.9",
     "kysely": "^0.28.2",
     "react": "^19.1.0",
