--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "kysely": "^0.28.2",
     "react": "^19.1.0",
     "sql-formatter": "^15.6.6",
-    "ts-json-schema-generator": "github:adr-h/ts-json-schema-generator#next",
+    "ts-json-schema-generator": "github:adr-h/ts-json-schema-generator#fd252f0",
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
