--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
