--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vite": "^7.0.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "wouter": "^3.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
