--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-react": "^4.5.2",
     "arg": "^5.0.2",
     "chokidar": "^3.6.0",
+    "clipboardy": "^4.0.0",
     "dedent": "^1.6.0",
     "fast-glob": "^3.3.3",
     "ink": "^6.1.1",
@@ -33,7 +34,8 @@
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vite": "^7.0.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "word-wrap": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
