add Edit Function params feature

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "ink-markdown": "^1.0.4",
     "ink-quicksearch-input": "^1.0.0",
     "ink-select-input": "^6.2.0",
+    "ink-text-input": "^6.0.0",
     "json-schema-faker": "^0.5.9",
     "kysely": "^0.28.2",
     "path-to-regexp": "^8.2.0",
     "react": "^19.1.0",
     "sql-formatter": "^15.6.6",
+    "telejson": "^8.0.0",
     "ts-json-schema-generator": "github:adr-h/ts-json-schema-generator#fd252f0",
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.3",
