--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clipboardy": "^4.0.0",
     "dedent": "^1.6.0",
     "fast-glob": "^3.3.3",
+    "fuzzysort": "^3.1.0",
     "ink": "^6.1.1",
     "ink-markdown": "^1.0.4",
     "ink-quicksearch-input": "^1.0.0",
