--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "ink-markdown": "^1.0.4",
     "ink-quicksearch-input": "^1.0.0",
     "ink-select-input": "^6.2.0",
+    "ink-spinner": "^5.0.0",
     "ink-text-input": "^6.0.0",
+    "ink-use-stdout-dimensions": "^1.0.5",
     "json-schema-faker": "^0.5.9",
     "kysely": "^0.28.2",
     "path-to-regexp": "^8.2.0",
