--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "arg": "^5.0.2",
+    "chalk": "^5.6.0",
     "chokidar": "^3.6.0",
     "clipboardy": "^4.0.0",
     "fast-glob": "^3.3.3",
